--- a/tut8.css
+++ b/tut8.css
@@ -1,87 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Varela+Round&display=swap');
 
-.h2{
+.h2 {
     /* text-align: center; */
     font-size: 30px !important;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
 }
-nav{
-    font-family: 'Varela Round' , sans-serif;
+
+nav {
+    font-family: 'Varela Round', sans-serif;
 }
-nav ul{
+
+nav ul {
+    /* background-image: url(bg.jpg); */
+    margin: 0%;
     display: flex;
     align-items: center;
     list-style-type: none;
-    height: 45px; 
-    background-color:black ;
-    color:rgb(242, 245, 248);
+    height: 45px;
+    background-color: black;
+    color: rgb(242, 245, 248);
 }
-.body{
-    background-image: url(bg.jpg);
+
+.body {
+    /* background-image: url(bg.jpg); */
     width: 100%;
-    height:0% ;
+    height: 0%;
     /* display: flex; */
 }
 
-.name{
+li {
+    padding: 10px;
+}
+
+.name {
     padding-left: 5%;
-    color: aliceblue;
+    /* color: aliceblue; */
 
 
 }
 
 
-.role{
+.role {
     padding-left: 5%;
-    color: aliceblue;
-
-
+    /* color: aliceblue;  */
 }
 
-.email{
+.email {
     padding-left: 5%;
-    color: aliceblue;
+    /* color: aliceblue; */
 
 }
 
-.date{
+.date {
     padding-left: 5%;
-    color: aliceblue;
+    /* color: aliceblue; */
 
 }
 
-.bonus{
-    padding-left:5%;
-    color: aliceblue;
-
-}
-
-.eligibility{
+.bonus {
     padding-left: 5%;
-    color: aliceblue;
+    /* color: aliceblue; */
+
 }
 
-.gender{
+.eligibility {
     padding-left: 5%;
-    color: aliceblue;
-
+    /* color: aliceblue; */
 }
 
-.female{
-    padding-left: 11.5%;
-}
-
-.box{
+.gender {
     padding-left: 5%;
-    color: aliceblue;
+    /* color: aliceblue; */
 
 }
 
-.car{
+.female,
+.male {
     padding-left: 5%;
-    color: aliceblue;
+}
+
+/* .text{
+} */
+
+.box {
+    padding-left: 5%;
+    /* color: aliceblue; */
 
 }
 
-.sr{
+.car {
+    padding-left: 5%;
+    /* color: aliceblue; */
+
+}
+
+.sr {
     padding-left: 5%;
 }
